public/stylesheets/style.css
/* ... */
#content a.filter span:last-of-type {
	padding-left: 5px;
	position: relative;
	display: table-cell;
	vertical-align: middle;
}
#sidebarFooter {
	height: 62px;
	color: #999;
	display: table;
	width: 97%;
	position: absolute;
	bottom: 0;
}
#sidebarFooter > span {
	position: relative;
	height: 100%;
	width: 80%;
	display: table-cell;
	vertical-align: middle;
	text-align: left;
}
#sidebarFooter > span:first-of-type {
	width: 20%;
}
#sidebarFooter > span > span {
	width: 15%;
	display: inline-block;
	margin-top: 0;
	margin-left: 1.6%;
	text-align: center;
}
#sidebarFooter > span > span img.affiliates {
	max-height: 55px;
	max-width: 90%;
}

/* 
 MODAL
 */
#modalContainer {
	position: absolute;
	z-index: 1;
	background: rgba(0,0,0,0.6);
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
}
#modal {
	position: relative;
	top: 50%;
	margin-top: -230px;
	background-color: white;
	width: 700px;
	margin-left: -350px;
	padding: 30px;
	box-sizing: border-box;
	left: 67%;
	text-align: center;
	border-radius: 3px;
}
#modal img {
	height: 100px;
	position: absolute;
	top: -46px;
	left: 50%;
	margin-left: -215px;
}

#modal h3 {
	margin-top: 45px;
}

/*
 SCROLLBARS
 */
.mCustomScrollBox {
    overflow: visible;
}
.mCSB_container {
    width: 100%;
}
.mCS_no_scrollbar .mCSB_container {
    width: auto;
}
.mCS-dark-3.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
    background-color: #000;
    background-color: rgba(0, 0, 0, 0.25);
}
.mCS-dark-3.mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar {
    background-color: #000;
    background-color: rgba(0, 0, 0, 0.35);
}
.mCSB_scrollTools_vertical {
    right: -20px;
}
.mCSB_inside>.mCSB_container {
    padding-right: 3%;
    box-sizing: border-box;
}
.mCS_no_scrollbar .mCSB_inside>.mCSB_container {
    padding-right: 0;
    box-sizing: initial;
}
.mCSB_scrollTools_vertical .mCSB_dragger{
    height: 30px;
}


/*
 TOOLTIP
 */
#tooltip {
	display: none;
	position: absolute;
	top: 0;
	left: 600px;
	z-index: 1;
	width: 120px;
}
.qtip-tip {
	display: none !important;
}
.qtip-content {
	left: -1000px;
	top: -1000px;
	padding: 0;
	overflow: visible;
}
.qtip {
	z-index: 1 !important;
}
.qtip-default {
	border: none;
	background: transparent;
	width: 140px;
}
.qtip-default img {
	width: 100%;
	position: relative;
	left: 840px;
	top: 940px;
}
select {
	width: 99%;
	padding: 1.5%;
	background-color: white;
	border-radius: 3px;
	border: none;
	box-sizing: border-box;
}
#topic {
	width: 100%;
}

/*
 SEARCH
 */
#searchTermCount {
	color: #F17D43;
}

#searchResultsList {
	padding: 0;
}

#searchResultsList h3 {
	font-size: 0.85rem;
	font-weight: bold;
	margin-bottom: 0;
}

#searchResultsList p {
	padding: 0;
	margin: 0;
}

#searchResultsList ul  {
	padding: 0;
	margin: 15px 0 0;
}

#searchResultsList pre {
	font-family: "ff-meta-web-pro",sans-serif;
	padding: 0;
	margin: 0;
}

#searchResultsList span.highlight {
	color: #F17D43 !important;
}

#searchResultsList li {
	position: relative;
}

#searchResultsList li span {
	color: #658397;
}
#searchResultsList li a.viewPledge {
	position: absolute;
	right: 0;
	bottom: 0;
	background: #4BC48E;
	color: white;
	text-decoration: none;
	font-weight: bold;
	font-size: 1rem;
	padding: 1.2% 2.5%;
	border-radius: 3px;
}
#searchResultsList li a.viewPledge img {
	height: 18px;
	float: right;
	margin: 2px 0 0 10px;
}

/*
 FORM BUTTONS
 */
span.text {
	display: block;
}
span.spinner {
	display: none;
}

/*
 <IE9 WARNING
 */
#ie-warn {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 9999999;
	background-color: white;
	text-align: center;
}

#ie-warn img {
	margin-top: 30px;
}

#ie-warn div {
	margin-top: 20px;
}

/*
 MOBILE
 */
body.phone {
	font-size: 0.8em;
}
.phone aside {
	width: 100%;
	min-width: initial;
}

.phone h1 {
	font-size: 1.5rem;
}

.phone #tabs li a {
	font-size: 0.8em;
}

.phone #modal {
	top: 100px;
	margin-top: 0px;
	width: 90%;
	margin-left: -50%;
	padding: 25px;
	left: 55%;
}

/*.phone #modal img {
	height: 70px;
	left: -53px;
}*/

.phone h3 {
	font-size: 1.5rem;
	margin: 0;
}

.phone a.button {
	margin: 8px auto;
}

.phone #content.contact input[type=text].half, .phone #content.contact input[type=email].half {
	display: inline-block;
	float: none;
	width: 100%;
	margin-right: 0;
}

.phone #fiveWays li {
	width: 100%;
	margin-bottom: 10px;
}

.phone #twitterFeed .twitterEntry p {
	font-size: 1rem;
}

.phone #content a.filter {
	font-size: 0.75rem;
}

#phone-notification {
	display: none;
}

.phone #phone-notification {
	display: block;
	position: absolute;
	top: 0px;
	left: 0px;
	z-index: 40000;
	width: 100%;
	background-color: black;
	color: white;
	padding: 4%;
	font-weight: bold;
	transition: top 1000ms ease;
}

.phone #phone-notification.hide {
	top: -100px;
}

.phone #phone-notification i {
	font-size: 1.5rem;
	vertical-align: middle;
}

@media screen and (max-width: 768px) {
	aside {
		min-width: 400px;
	}
}
@media screen and (max-width: 1280px) {
	#modal {
		width: 550px;
		margin-left: -225px;
	}
}
@media screen and (min-width: 1450px){
	a.social i {
		font-size: 1.35rem;
	}
}
@media screen and (min-width: 1600px){	
	a.social i {
		font-size: 1.4rem;
	}
}

